bynkc/tests/fixtures/negative/331_par_traverse_all_in_pure_context/input.bynk
commons demo.tapure

fn check(x: Int) -> Effect[Result[Int, String]] {
  Effect.pure(Ok(x))
}

fn bad(xs: List[Int]) -> Int {
  let r = xs.parTraverseAll((x: Int) => check(x))
  5
}
